--- a/examples.html
+++ b/examples.html
@@ -1,3 +1,12 @@
+
+
+
+
+                <!-- ASSIGNMENTS -->
+
+
+
+
 <!DOCTYPE HTML>
 <html>
 
@@ -22,9 +31,9 @@
       <div id="menubar">
         <ul id="menu">
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
-          <li class="selected"><a href="index.html">HOME</a></li>
+          <li class="selected"><a href="index.html">HOME</a></li>s
           <li><a href="examples.html">ASSIGNMENTS</a></li>
-          <li><a href="page.html">PROJECTS</a></li>
+          <li><a href="progress.html">PROJECTS</a></li>
         </ul>
       </div>
     </div>
@@ -34,9 +43,10 @@
       </div>
       <div id="content">
         <!-- insert the page content here -->
-        <h1>ASSIGNMENTS:</h1>
-        <p>this page is for computers 10 assignments please look around.</p>
-<marquee>BEST SITE ON THE HINTERWEB-------------------------------BEST SITE ON THE HINTERWEB</marquee>
+        <h1>Welcome to assignments, were i put small assignments.</h1>
+        <p></p>
+        <a href="assignments/Myself.pptx" download>About me</a>
+        <marquee>BEST SITE ON THE HINTERWEB-------------------------------BEST SITE ON THE HINTERWEB</marquee>
       </div>
     </div>
     <div id="content_footer"></div>
