--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+
+
+
+
+
+          <!-- HOME -->
+
+
+
+
 <!DOCTYPE HTML>
 <html>
 
@@ -22,9 +32,9 @@
       <div id="menubar">
         <ul id="menu">
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
-          <li class="selected"><a href="index.html">HOME</a></li>
+          <li class="selected"><a href="index.html">HOME</a></li>s
           <li><a href="examples.html">ASSIGNMENTS</a></li>
-          <li><a href="page.html">PROJECTS</a></li>
+          <li><a href="progress.html">PROJECTS</a></li>
         </ul>
       </div>
     </div>
@@ -37,7 +47,6 @@
         <h1>Welcome to my Webpage</h1>
         <p>this webpage is about handing in assignments and projects for Grade 10 computers. please look at the appropriate columms for the appropriate assignments and porjects, after that feel free to explore enjoy.</p>
         <a href="Atom.exe" download>Atom HTML</a>
-        <a href="Atom.exe" download>Game Maker STudio 2</a>
         <marquee>BEST SITE ON THE HINTERWEB-------------------------------BEST SITE ON THE HINTERWEB</marquee>
       </div>
     </div>
@@ -48,3 +57,4 @@
   </div>
 </body>
 </html>
+
